Task #28543 - z-index fixes

--- a/src/components/DataTable/dataTable.scss
+++ b/src/components/DataTable/dataTable.scss
@@ -22,7 +22,7 @@
     > .ps__rail-x,
     > .ps__rail-y {
       position: absolute;
-      z-index: 6;
+      z-index: 3;
       transition: opacity 250ms linear;
       display: none;
 
